# KTTY

./: .gitignore  .last_build_id  .metadata  README.md  build-agent.sh  build-crypto.sh  flutter_bootstrap.js  flutter_service_worker.js  index.html  main.dart.acc5bd52.js  main.dart.js  pubspec.yaml  version.json
android/app/: build.gradle.kts
assets/: AssetManifest.bin.json  NOTICES
backend/: Cargo.toml  Dockerfile  fly.toml
backend/agent/: Cargo.toml  build.rs  flutter_bootstrap.js  index.html  main.dart.js  manifest.json
backend/agent/assets/: AssetManifest.bin.json
backend/agent/src/: main.rs  pty.rs  ring_buffer.rs  session.rs
backend/agent/wasm/: ktty_wasm_crypto_bg.wasm  ktty_wasm_crypto_bg.wasm.d.ts  package.json
backend/agent/wasm/wasm/: ktty_wasm_crypto.d.ts  ktty_wasm_crypto.js
backend/common/: Cargo.toml
backend/ffi-crypto/: Cargo.toml
backend/relay/: Cargo.toml
backend/wasm-crypto/: Cargo.toml
backend/wasm-crypto/src/: lib.rs
lib/: app.dart  main.dart
lib/config/: constants.dart
lib/mock/: mock_ws_server.dart
lib/models/: connection_state.dart  message_envelope.dart  viewport_mode.dart
lib/screens/: dashboard_screen.dart  ping_native.dart  ping_web.dart  terminal_screen.dart
lib/state/: keyboard_state.dart  session_state.dart  viewport_state.dart
linux/: CMakeLists.txt
run-agent/: deploy-ktty-agent.sh
rust_builder/: pubspec.yaml
test/: clipboard_text_test.dart  terminal_container_zoom_test.dart  terminal_service_payload_test.dart  widget_test.dart
tests/: cdp_drive.dart
web/: index.html  wasm-loader.js
(+35 files in other folders)
