[package]
name = "ktty-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
ktty-common = { path = "../common" }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
rustls = { version = "0.23", features = ["ring"] }
ring = "0.17"
portable-pty = "0.9"
clap = { version = "4", features = ["derive", "env"] }
serde_json = "1.0"
futures-util = "0.3"
base64 = "0.22"
log = "0.4"
env_logger = "0.11"
libc = "0.2"
anyhow = "1"
ml-kem = "0.2"
rand = "0.8"
hex = "0.4.3"

[build-dependencies]
chrono = "0.4"
